Documented the 64-bit types

--- a/README.rdoc
+++ b/README.rdoc
@@ -41,14 +41,16 @@ what's going on.
 
   byte      Unsigned 8-bit Integer (unsigned char)
   int8      Signed 8-bit Integer (char)
-  int16			Signed 16-bit Integer (short)
-  uint16		Unsigned 16-bit Integer (unsigned short)
-  int32			Signed 32-bit Integer (int)
-  uint32		Unsigned 32-bit Integer (unsigned int)
-  float			Single Precision Floating Point Number (float)
-  double		Double Precision Floating Point Number (double)
-  pointer		Pointer Type
-  string		Null-Terminated String (char *)
+  int16	    Signed 16-bit Integer (short)
+  uint16    Unsigned 16-bit Integer (unsigned short)
+  int32	    Signed 32-bit Integer (int)
+  uint32    Unsigned 32-bit Integer (unsigned int)
+  int64	    Signed 64-bit Integer 
+  uint64    Unsigned 64-bit Integer 
+  float     Single Precision Floating Point Number (float)
+  double    Double Precision Floating Point Number (double)
+  pointer   Pointer Type
+  string    Null-Terminated String (char *)
 
 == LICENSE:
 
