--- a/README.rdoc
+++ b/README.rdoc
@@ -15,7 +15,7 @@ what's going on.
 
 == EXAMPLE:
 
-  var FFI = require("ffi");
+  var FFI = require("node-ffi");
 
   var libm = new FFI.Library("libm", { "ceil": [ "double", [ "double" ] ] });
   libm.ceil(1.5); // 2
@@ -29,7 +29,11 @@ what's going on.
 * MacOS X or Linux.
 * You will need Node.js installed.
 
-== INSTALL:
+== NPM INSTALL:
+  
+  $ npm install node-ffi
+
+== SOURCE INSTALL:
 
   $ git clone git://github.com/rbranson/node-ffi.git
   $ cd node-ffi
