--- a/example/factorial/README
+++ b/example/factorial/README
@@ -1,5 +1,6 @@
 If you've already got node installed, this can be used:
 
+    $ node-waf configure
     $ node-waf build
     ...
     $ node factorial.js 35
