--- a/deps/libffi/doc/version.texi
+++ b/deps/libffi/doc/version.texi
@@ -1,4 +1,4 @@
-@set UPDATED 23 August 2011
-@set UPDATED-MONTH August 2011
-@set EDITION 3.0.10
-@set VERSION 3.0.10
+@set UPDATED 12 November 2011
+@set UPDATED-MONTH November 2011
+@set EDITION 3.0.11-rc2
+@set VERSION 3.0.11-rc2
