--- a/deps/README
+++ b/deps/README
@@ -5,7 +5,7 @@ libffi should be statically compiled using its build system before compiling nod
 
 On a Unix system:
 
-  $ ./configure --disable-builddir --enable-portable-binary --enable-static --disable-shared
+  $ ./configure --enable-static --disable-shared
   $ make
 
 
@@ -16,7 +16,7 @@ http://ftp.mozilla.org/pub/mozilla.org/mozilla/libraries/win32/MozillaBuildSetup
 
 Note to fix the CC target path to the msvcc.sh file if it's different for you.
 
-  $ ./configure CC="sh /c/node-ffi/deps/libffi/msvcc.sh" LD=link CPP="cl -nologo -EP" CFLAGS="" --disable-builddir --enable-portable-binary --enable-static --disable-shared
+  $ ./configure CC="sh /c/node-ffi/deps/libffi/msvcc.sh" LD=link CPP="cl -nologo -EP" CFLAGS="" --enable-static --disable-shared
   $ make
 
 
