update the factorial example README compile command

--- a/example/factorial/README
+++ b/example/factorial/README
@@ -1,6 +1,6 @@
 On compile `factorial.dylib` on OS X:
 
-    $ g++ -dynamiclib -undefined suppress -flat_namespace factorial.c -o factorial.dylib
+    $ gcc -dynamiclib -undefined suppress -flat_namespace factorial.c -o libfactorial.dylib
 
 To run the example:
 
